column align-right fix

--- a/HW_20/style.css
+++ b/HW_20/style.css
@@ -34,6 +34,7 @@ td {
 
 .col-title {
   cursor: pointer;
+  user-select: none; 
   padding-bottom: 20px;
 }
 
